# medairian-portfolio

./: .pre-commit-config.yaml  README.md  pyproject.toml
.streamlit/: config.toml
src/medairian/: app.py  entry.py  types.py
src/medairian/pages/: about.py  resume.py
styles/: main.css
